# RDF-cycling-tour-operator

./: .gitignore  README.md  cto_data_bikes.ttl  cto_data_bookings.ttl  cto_data_clients.ttl  cto_data_guides.ttl  cto_data_mountains.ttl  cto_data_path.ttl  cto_data_reviews.ttl  cto_data_steps.ttl  cto_data_tour.ttl  cto_data_water_points.ttl  cto_mountains_paths.ttl  cto_queries.txt  cto_schema.ttl  cto_shapes.ttl  mapping.ttl  rapport.md
backend/: .env.template  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/routes/: api.py
backend/src/services/: chatbot_service.py  dbpedia_service.py  sparql_service.py
backend/src/services/text_to_sparql/: data_summary.py  prompt.py  text_to_sparql_service.py
data_extraction/: bike_scraping.py  cleaning.py  cleaning4mapping.py  get_mountains.py  path_scraping.py  tour_booking_creation.py
data_generation/: tour_generator.py
database/: cto_competency_questions.txt  cto_data_bikes.ttl  cto_data_bookings.ttl  cto_data_bookings_bike.ttl  cto_data_bookings_tour.ttl  cto_data_clients.ttl  cto_data_guides.ttl  cto_data_reviews.ttl  cto_data_tour.ttl  cto_data_water_points.ttl  cto_mountains_paths.ttl  cto_queries.txt  cto_schema.ttl  cto_shapes.ttl
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: main.js  style.css
src/: bike_scrapping.py
validation_reports/: merged_data_report.txt
