[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==2.3.2",
    "flask-cors>=6.0.2",
    "flask-restx==1.1.0",
    "google-genai>=1.59.0",
    "numpy>=2.4.1",
    "python-dotenv==1.0.0",
    "rdflib==6.3.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
    "sparqlwrapper==1.8.5",
    "werkzeug==2.3.7",
    "owlrl==6.0.2",
]
